image and scene

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div id="main-controls">
             <button id="add-object">Add Object</button>
         </div>
+        <div id="scene"></div>
         <div id="output"></div>
 
         <div id="explorer-contextmenu">
@@ -38,10 +39,12 @@
         <div id="object-data-new-data">
             <input id="object-data-search" type="text" placeholder="Type to search">
             <div id="all-object-data"></div>
+            <button id="object-data-add-close">X</button>
         </div>
     </section>
 
     <script type="module" src="assets/utils/string_converter.js"></script>
+    <script type="module" src="assets/editor_windows/scene_handler.js"></script>
     <script type="module" src="assets/editor_data/object_data_list.js"></script>
     <script type="module" src="assets/project_data/project_data.js"></script>
     <script type="module" src="assets/editor_windows/explorer.js"></script>
