scene run and gravity object data

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
             <div id="object-data"></div>
         </div>
         <div id="main-controls">
-            <button id="add-object">Add Object</button>
+            <div>
+                <button id="add-object">Add Object</button>
+                <p>Objects</p>
+            </div>
+            <div>
+                <button id="run">Run</button>
+                <button id="pause">Pause</button>
+                <p>Game</p>
+            </div>
         </div>
         <div id="scene"></div>
         <div id="output"></div>
@@ -45,6 +53,7 @@
 
     <script type="module" src="assets/utils/string_converter.js"></script>
     <script type="module" src="assets/editor_windows/scene_handler.js"></script>
+    <script type="module" src="assets/editor_windows/run_handler.js"></script>
     <script type="module" src="assets/editor_data/object_data_list.js"></script>
     <script type="module" src="assets/project_data/project_data.js"></script>
     <script type="module" src="assets/editor_windows/explorer.js"></script>
